--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pi-dashboard",
   "author": "Kewell",
   "version": "1.0.0",
-  "license": "Private",
+  "license": "GPL-3.0",
   "description": "",
   "repository": {
     "type": "git",
